fixed text wrapping in chrome

--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ body {
     color: #9b130c;
     width: min-content;
     text-align: right;
+    white-space: nowrap;
 }
 
 .details {
